--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -79,7 +79,7 @@
     "> Never confuse education with intelligence, you can have a PhD and still be an idiot.\n",
     "    - Richard Feynman\n",
     "\n",
-    "Described by <3 [Wiki](http://wiki.juneday.se/mediawiki/index.php/Homebrew_and_Macports)\n"
+    "Described by [Wiki](http://wiki.juneday.se/mediawiki/index.php/Homebrew_and_Macports)\n"
    ]
   },
   {
